--- a/wp-content/themes/reactfit/react-src/package.json
+++ b/wp-content/themes/reactfit/react-src/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@devloco\/react-scripts-wptheme": "3.1.1-wptheme-3.1.3",
+        "@devloco/react-scripts-wptheme": "3.1.1-wptheme-3.1.3",
         "react": "^16.9.0",
         "react-dom": "^16.9.0"
     },
@@ -32,6 +32,6 @@
             "last 1 safari version"
         ]
     },
-    "homepage": "\/new-tcf\/wp-content\/themes\/reactfit",
-    "browserLaunchTo": "http:\/\/localhost\/new-tcf"
+    "homepage": "/new-tcf/wp-content/themes/reactfit",
+    "browserLaunchTo": "http://localhost/new-tcf"
 }
